feat: Top level (engine) WAL
Catalog loading is now fully asynchronous and parallel - this speeds up start process on machines with multiple CPUs.

Refs: #502