@@ -42,7 +42,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
-import java.util.function.Supplier;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -187,12 +186,12 @@ class ProgressingFutureTest {
 	@Test
 	@DisplayName("Should create and compose nested ProgressingFutures")
 	void shouldCreateNestedProgressingFuture() throws ExecutionException, InterruptedException, TimeoutException {
-		final Collection<Supplier<ProgressingFuture<String>>> nestedFactories = Arrays.asList(
-			() -> new ProgressingFuture<>(
+		final Collection<ProgressingFuture<String>> nestedFutures = Arrays.asList(
+			new ProgressingFuture<>(
 				5,
 				theFuture -> "result1"
 			),
-			() -> new ProgressingFuture<>(
+			new ProgressingFuture<>(
 				3,
 				theFuture -> "result2"
 			)
@@ -203,7 +202,7 @@ class ProgressingFutureTest {
 
 		final ProgressingFuture<List<String>> future = new ProgressingFuture<>(
 			2, // additional steps for this level
-			nestedFactories,
+			nestedFutures,
 			resultMapper
 		);
 		future.execute(this.executor);
@@ -227,12 +226,12 @@ class ProgressingFutureTest {
 	@Test
 	@DisplayName("Should aggregate progress from multiple nested ProgressingFutures")
 	void shouldAggregateProgressFromNestedFutures() throws ExecutionException, InterruptedException, TimeoutException {
-		final Collection<Supplier<ProgressingFuture<String>>> nestedFactories = Arrays.asList(
-			() -> new ProgressingFuture<>(
+		final Collection<ProgressingFuture<String>> nestedFactories = Arrays.asList(
+			new ProgressingFuture<>(
 				4,
 				theFuture -> "nested1"
 			),
-			() -> new ProgressingFuture<>(
+			new ProgressingFuture<>(
 				6,
 				theFuture -> "nested2"
 			)
@@ -293,8 +292,8 @@ class ProgressingFutureTest {
 	void shouldHandleExceptionInNestedFuture() {
 		final RuntimeException testException = new RuntimeException("Nested exception");
 
-		final Collection<Supplier<ProgressingFuture<String>>> nestedFactories = Arrays.asList(
-			() -> new ProgressingFuture<>(
+		final Collection<ProgressingFuture<String>> nestedFutures = List.of(
+			new ProgressingFuture<>(
 				3,
 				theFuture -> {
 					throw testException;
@@ -304,7 +303,7 @@ class ProgressingFutureTest {
 
 		final ProgressingFuture<List<String>> future = new ProgressingFuture<>(
 			2,
-			nestedFactories,
+			nestedFutures,
 			(progress, results) -> new ArrayList<>(results)
 		);
 
@@ -393,16 +392,16 @@ class ProgressingFutureTest {
 	@Test
 	@DisplayName("Should update progress correctly with multiple nested futures")
 	void shouldUpdateProgressCorrectlyWithMultipleNestedFutures() throws ExecutionException, InterruptedException, TimeoutException {
-		final Collection<Supplier<ProgressingFuture<Integer>>> nestedFactories = Arrays.asList(
-			() -> new ProgressingFuture<>(
+		final Collection<ProgressingFuture<Integer>> nestedFutures = Arrays.asList(
+			new ProgressingFuture<>(
 				10,
 				theFuture -> 1
 			),
-			() -> new ProgressingFuture<>(
+			new ProgressingFuture<>(
 				20,
 				theFuture -> 2
 			),
-			() -> new ProgressingFuture<>(
+			new ProgressingFuture<>(
 				30,
 				theFuture -> 3
 			)
@@ -410,7 +409,7 @@ class ProgressingFutureTest {
 
 		final ProgressingFuture<Integer> future = new ProgressingFuture<>(
 			5, // additional steps
-			nestedFactories,
+			nestedFutures,
 			(progress, results) -> results.stream().mapToInt(Integer::intValue).sum()
 		);
 		future.execute(this.executor);
@@ -505,5 +504,322 @@ class ProgressingFutureTest {
 
 		assertEquals(testException, exception.getCause());
 		assertTrue(progressUpdates.contains("11/11"));
+	}
+
+	/**
+	 * Verifies that the new constructor with initializer works correctly in the success path
+	 * and that the onFailure handler is not called when everything succeeds.
+	 */
+	@Test
+	@DisplayName("Should execute successfully with initializer constructor")
+	void shouldExecuteSuccessfullyWithInitializerConstructor() throws ExecutionException, InterruptedException, TimeoutException {
+		final List<String> onFailureCalls = new ArrayList<>();
+		final List<String> progressUpdates = new ArrayList<>();
+
+		final ProgressingFuture<String> future = new ProgressingFuture<>(
+			2, // actionSteps
+			() -> "initial data", // initializer
+			initResult -> List.of( // nestedFutureFactory
+				new ProgressingFuture<>(3, f -> "nested1"),
+				new ProgressingFuture<>(4, f -> "nested2")
+			),
+			(progressFuture, initResult, nestedResults) -> // resultMapper
+				initResult + ":" + nestedResults.stream().map(Object::toString).reduce((a, b) -> a + "," + b).orElse(""),
+			(initResult, throwable) -> // onFailure
+				onFailureCalls.add("Failed with init: " + initResult + ", error: " + throwable.getMessage())
+		);
+
+		future.setProgressConsumer((stepsDone, totalSteps) -> progressUpdates.add(stepsDone + "/" + totalSteps));
+		future.execute(this.executor);
+
+		final String result = future.get(2, TimeUnit.SECONDS);
+		assertEquals("initial data:nested1,nested2", result);
+		assertTrue(onFailureCalls.isEmpty(), "onFailure should not be called on success");
+		assertTrue(progressUpdates.contains("12/12")); // 2 + 1 + 3 + 1 + 4 + 1 = 12
+	}
+
+	/**
+	 * Verifies that the onFailure handler is called when the initializer throws an exception.
+	 */
+	@Test
+	@DisplayName("Should call onFailure handler when initializer throws exception")
+	void shouldCallOnFailureWhenInitializerThrowsException() {
+		final List<String> onFailureCalls = new ArrayList<>();
+		final RuntimeException testException = new RuntimeException("Initializer failed");
+
+		final ProgressingFuture<String> future = new ProgressingFuture<>(
+			2, // actionSteps
+			() -> { // initializer that throws
+				throw testException;
+			},
+			initResult -> List.of( // nestedFutureFactory
+				new ProgressingFuture<>(3, f -> "nested1")
+			),
+			(progressFuture, initResult, nestedResults) -> // resultMapper
+				"should not reach here",
+			(initResult, throwable) -> // onFailure
+				onFailureCalls.add("Failed with init: " + initResult + ", error: " + throwable.getMessage())
+		);
+
+		future.execute(this.executor);
+
+		final ExecutionException exception = assertThrows(
+			ExecutionException.class,
+			() -> future.get(1, TimeUnit.SECONDS)
+		);
+
+		assertEquals(testException, exception.getCause());
+		assertEquals(1, onFailureCalls.size());
+		assertEquals("Failed with init: null, error: Initializer failed", onFailureCalls.get(0));
+	}
+
+	/**
+	 * Verifies that the onFailure handler is called when the nestedFutureFactory throws an exception.
+	 */
+	@Test
+	@DisplayName("Should call onFailure handler when nestedFutureFactory throws exception")
+	void shouldCallOnFailureWhenNestedFutureFactoryThrowsException() {
+		final List<String> onFailureCalls = new ArrayList<>();
+		final RuntimeException testException = new RuntimeException("NestedFutureFactory failed");
+
+		final ProgressingFuture<String> future = new ProgressingFuture<>(
+			2, // actionSteps
+			() -> "initial data", // initializer
+			initResult -> { // nestedFutureFactory that throws
+				throw testException;
+			},
+			(progressFuture, initResult, nestedResults) -> // resultMapper
+				"should not reach here",
+			(initResult, throwable) -> // onFailure
+				onFailureCalls.add("Failed with init: " + initResult + ", error: " + throwable.getMessage())
+		);
+
+		future.execute(this.executor);
+
+		final ExecutionException exception = assertThrows(
+			ExecutionException.class,
+			() -> future.get(1, TimeUnit.SECONDS)
+		);
+
+		assertEquals(testException, exception.getCause());
+		assertEquals(1, onFailureCalls.size());
+		assertEquals("Failed with init: null, error: NestedFutureFactory failed", onFailureCalls.get(0));
+	}
+
+	/**
+	 * Verifies that the onFailure handler is called when one of the nested futures fails.
+	 */
+	@Test
+	@DisplayName("Should call onFailure handler when nested future fails")
+	void shouldCallOnFailureWhenNestedFutureFails() {
+		final List<String> onFailureCalls = new ArrayList<>();
+		final RuntimeException testException = new RuntimeException("Nested future failed");
+
+		final ProgressingFuture<String> future = new ProgressingFuture<>(
+			2, // actionSteps
+			() -> "initial data", // initializer
+			initResult -> List.of( // nestedFutureFactory
+				new ProgressingFuture<>(3, f -> "nested1"),
+				new ProgressingFuture<>(4, f -> {
+					throw testException;
+				})
+			),
+			(progressFuture, initResult, nestedResults) -> // resultMapper
+				"should not reach here",
+			(initResult, throwable) -> // onFailure
+				onFailureCalls.add("Failed with init: " + initResult + ", error: " + throwable.getMessage())
+		);
+
+		future.execute(this.executor);
+
+		final ExecutionException exception = assertThrows(
+			ExecutionException.class,
+			() -> future.get(2, TimeUnit.SECONDS)
+		);
+
+		assertEquals(testException, exception.getCause());
+		assertEquals(1, onFailureCalls.size());
+		assertEquals("Failed with init: initial data, error: java.lang.RuntimeException: Nested future failed", onFailureCalls.get(0));
+	}
+
+	/**
+	 * Verifies that the onFailure handler is called when the resultMapper throws an exception.
+	 */
+	@Test
+	@DisplayName("Should call onFailure handler when resultMapper throws exception")
+	void shouldCallOnFailureWhenResultMapperThrowsException() {
+		final List<String> onFailureCalls = new ArrayList<>();
+		final RuntimeException testException = new RuntimeException("ResultMapper failed");
+
+		final ProgressingFuture<String> future = new ProgressingFuture<>(
+			2, // actionSteps
+			() -> "initial data", // initializer
+			initResult -> List.of( // nestedFutureFactory
+				new ProgressingFuture<>(3, f -> "nested1"),
+				new ProgressingFuture<>(4, f -> "nested2")
+			),
+			(progressFuture, initResult, nestedResults) -> { // resultMapper that throws
+				throw testException;
+			},
+			(initResult, throwable) -> // onFailure
+				onFailureCalls.add("Failed with init: " + initResult + ", error: " + throwable.getMessage())
+		);
+
+		future.execute(this.executor);
+
+		final ExecutionException exception = assertThrows(
+			ExecutionException.class,
+			() -> future.get(2, TimeUnit.SECONDS)
+		);
+
+		assertEquals(testException, exception.getCause());
+		assertEquals(1, onFailureCalls.size());
+		assertEquals("Failed with init: initial data, error: java.lang.RuntimeException: ResultMapper failed", onFailureCalls.get(0));
+	}
+
+	/**
+	 * Verifies that the onFailure handler is called when the future is manually completed exceptionally.
+	 */
+	@Test
+	@DisplayName("Should call onFailure handler when manually completed exceptionally")
+	void shouldCallOnFailureWhenManuallyCompletedExceptionally() throws InterruptedException {
+		final List<String> onFailureCalls = new ArrayList<>();
+		final RuntimeException testException = new RuntimeException("Manual exception");
+		final CountDownLatch taskStartedLatch = new CountDownLatch(1);
+		final CountDownLatch completionLatch = new CountDownLatch(1);
+
+		final ProgressingFuture<String> future = new ProgressingFuture<>(
+			2, // actionSteps
+			() -> "initial data", // initializer
+			initResult -> List.of( // nestedFutureFactory
+				new ProgressingFuture<>(3, f -> {
+					taskStartedLatch.countDown();
+					try {
+						completionLatch.await();
+					} catch (InterruptedException e) {
+						Thread.currentThread().interrupt();
+					}
+					return "nested1";
+				})
+			),
+			(progressFuture, initResult, nestedResults) -> // resultMapper
+				"should not reach here",
+			(initResult, throwable) -> // onFailure
+				onFailureCalls.add("Failed with init: " + initResult + ", error: " + throwable.getMessage())
+		);
+
+		future.execute(this.executor);
+
+		// Wait for nested future to start
+		assertTrue(taskStartedLatch.await(1, TimeUnit.SECONDS), "Nested task should start within 1 second");
+
+		// Manually complete exceptionally
+		future.completeExceptionally(testException);
+
+		final ExecutionException exception = assertThrows(
+			ExecutionException.class,
+			() -> future.get(100, TimeUnit.MILLISECONDS)
+		);
+
+		// When manually completing exceptionally while nested futures are running,
+		// the nested futures get cancelled, which can result in CancellationException
+		assertTrue(
+			exception.getCause() instanceof java.util.concurrent.CancellationException ||
+			exception.getCause() == testException,
+			"Exception cause should be CancellationException or the original exception"
+		);
+		// onFailure might be called multiple times when manually completing exceptionally
+		// while nested futures are running (once for manual completion, once for nested future cancellation)
+		assertTrue(onFailureCalls.size() >= 1, "onFailure should be called at least once");
+		assertTrue(
+			onFailureCalls.stream().anyMatch(call -> call.contains("Manual exception")),
+			"At least one onFailure call should contain the manual exception"
+		);
+	}
+
+	/**
+	 * Verifies that the onFailure handler is called with correct parameters when multiple nested futures fail.
+	 */
+	@Test
+	@DisplayName("Should call onFailure handler when multiple nested futures fail")
+	void shouldCallOnFailureWhenMultipleNestedFuturesFail() {
+		final List<String> onFailureCalls = new ArrayList<>();
+		final RuntimeException testException1 = new RuntimeException("First nested future failed");
+		final RuntimeException testException2 = new RuntimeException("Second nested future failed");
+
+		final ProgressingFuture<String> future = new ProgressingFuture<>(
+			2, // actionSteps
+			() -> "initial data", // initializer
+			initResult -> List.of( // nestedFutureFactory
+				new ProgressingFuture<>(3, f -> {
+					throw testException1;
+				}),
+				new ProgressingFuture<>(4, f -> {
+					throw testException2;
+				})
+			),
+			(progressFuture, initResult, nestedResults) -> // resultMapper
+				"should not reach here",
+			(initResult, throwable) -> // onFailure
+				onFailureCalls.add("Failed with init: " + initResult + ", error: " + throwable.getMessage())
+		);
+
+		future.execute(this.executor);
+
+		final ExecutionException exception = assertThrows(
+			ExecutionException.class,
+			() -> future.get(2, TimeUnit.SECONDS)
+		);
+
+		// One of the exceptions should be the cause (CompletableFuture.allOf behavior)
+		assertTrue(
+			exception.getCause() == testException1 || exception.getCause() == testException2,
+			"Exception cause should be one of the nested future exceptions"
+		);
+		assertEquals(1, onFailureCalls.size());
+		assertTrue(
+			onFailureCalls.get(0).contains("initial data"),
+			"onFailure should be called with correct init result"
+		);
+	}
+
+	/**
+	 * Verifies that the onFailure handler is called with null initResult when initializer fails
+	 * and that progress is still updated to 100% on failure.
+	 */
+	@Test
+	@DisplayName("Should call onFailure handler with null initResult when initializer fails and update progress")
+	void shouldCallOnFailureWithNullInitResultWhenInitializerFailsAndUpdateProgress() throws InterruptedException {
+		final List<String> onFailureCalls = new ArrayList<>();
+		final List<String> progressUpdates = new ArrayList<>();
+		final RuntimeException testException = new RuntimeException("Initializer failed");
+
+		final ProgressingFuture<String> future = new ProgressingFuture<>(
+			5, // actionSteps
+			() -> { // initializer that throws
+				throw testException;
+			},
+			initResult -> List.of( // nestedFutureFactory
+				new ProgressingFuture<>(3, f -> "nested1")
+			),
+			(progressFuture, initResult, nestedResults) -> // resultMapper
+				"should not reach here",
+			(initResult, throwable) -> // onFailure
+				onFailureCalls.add("Failed with init: " + initResult + ", error: " + throwable.getMessage())
+		);
+
+		future.setProgressConsumer((stepsDone, totalSteps) -> progressUpdates.add(stepsDone + "/" + totalSteps));
+		future.execute(this.executor);
+
+		try {
+			future.get(1, TimeUnit.SECONDS);
+		} catch (ExecutionException | TimeoutException e) {
+			// Expected
+		}
+
+		assertEquals(1, onFailureCalls.size());
+		assertEquals("Failed with init: null, error: Initializer failed", onFailureCalls.get(0));
+		// Progress should be updated to completion even on failure
+		assertTrue(progressUpdates.contains("6/6")); // 5 + 1 = 6
 	}
 }
